Disable screen rotation didn't work, so I did the responsive for that context // Also added some extra durations to add smooth, and corrected elements gaps

--- a/styles/modules/project_transition.module.css
+++ b/styles/modules/project_transition.module.css
@@ -88,6 +88,41 @@
   }
 }
 
+@media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  .transition_container {
+    width: 100%;
+    height: auto;
+    padding: 80px 50px 80px 50px;
+  }
+  .transition {
+    flex-direction: column;
+    gap: 125px;
+    align-items: center;
+    justify-content: center;
+  }
+  .dots {
+    gap: 25px;
+    position: static;
+    transform: translateX(0);
+  }
+  .dots_center,
+  .dots_left,
+  .dots_right {
+    width: 50px;
+    height: 50px;
+  }
+  .title {
+    width: 50%;
+    height: 50%;
+    z-index: 25;
+  }
+  .triangle {
+    position: static;
+    width: 30px;
+    height: 30px;
+  }
+}
+
 @media screen and (orientation: portrait) {
   .transition_container {
     width: 100%;
