--- a/styles/modules/projects.module.css
+++ b/styles/modules/projects.module.css
@@ -146,7 +146,7 @@
   justify-content: center;
   align-items: flex-start;
   padding: 8px 12px;
-  background-color: rgb(10, 10, 10, 0.75);
+  background-color: rgb(22, 22, 40, 0.75);
   gap: 14px;
   z-index: 75;
 }
@@ -253,4 +253,105 @@
   transform: translateX(-50%);
   z-index: 25;
   background-color: var(--cyan-dark-transparent);
+}
+
+@media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  .scroll_section_inner {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    gap: 25vh;
+  }
+  .image {
+    width: 40%;
+    height: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 50;
+  }
+  .image > img {
+    object-fit: cover;
+  }
+  .number {
+    font-size: 15vh;
+    font-weight: 800;
+    color: rgba(235, 235, 235, 0.5);
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 75;
+    background-color: var(--cyan-dark);
+    padding: 0 7.5vw;
+  }
+  .title {
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%, 45%);
+    display: flex;
+    width: 35%;
+    height: max-content;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 8px;
+    background-color: rgb(22, 22, 40, 0.75);
+    gap: 14px;
+    z-index: 75;
+  }
+  .title > p {
+    font-size: 16px;
+    font-weight: 400px;
+    text-align: start;
+    color: var(--white-main);
+    user-select: none;
+    cursor: default;
+    padding: 0;
+  }
+  .button {
+    width: 25%;
+    background-color: var(--white-main);
+    padding: 6px 0;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    user-select: none;
+    cursor: pointer;
+    font-weight: 600;
+    color: var(--black-main);
+  }
+
+  .dots {
+    width: 60%;
+    height: 30%;
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 25;
+    background-image: radial-gradient(
+        rgb(255, 255, 255, 0.5) 10%,
+        transparent 14%
+      ),
+      radial-gradient(rgb(255, 255, 255, 0.5) 10%, transparent 14%);
+    background-position: 0px 0px, 8px 8px;
+    background-size: 16px 16px;
+    background-color: transparent;
+  }
+
+  .accent {
+    width: 60%;
+    height: 30%;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 25;
+    background-color: var(--cyan-dark-transparent);
+  }
 }
