--- a/styles/modules/second_page.module.css
+++ b/styles/modules/second_page.module.css
@@ -15,11 +15,18 @@
 
 @media screen and (max-width: 700px) {
   .page {
-    padding: 20px 20px 20px 20px;
+    padding: 40px 20px 20px 20px;
   }
 }
 @media screen and (orientation: portrait) {
   .page {
+    gap: 40px;
+  }
+}
+
+@media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  .page {
+    padding: 20px 20px 20px 20px;
     gap: 40px;
   }
 }
@@ -38,6 +45,14 @@
   .container {
     display: flex;
     justify-content: center;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  .container {
+    display: flex;
+    justify-content: flex-start;
     align-items: center;
   }
 }
@@ -90,12 +105,27 @@
   }
 }
 
+@media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  .line {
+    display: none;
+  }
+  .text > h2 {
+    color: var(--pink);
+  }
+}
+
 .svg_container {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+}
+
+@media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  .svg_container {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 700px) {
